--- a/hosts.ini
+++ b/hosts.ini
@@ -1,6 +1,6 @@
 [g1]
-n1 ansible_host=172.31.25.24 ansible_user=centos ansible_ssh_private_key_file=/home/centos/master.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-n2 ansible_host=172.31.22.10 ansible_user=centos ansible_ssh_private_key_file=/home/centos/master.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n1 ansible_host=172.31.30.145 ansible_user=ubuntu ansible_ssh_private_key_file=/home/centos/master.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n2 ansible_host=172.31.27.178 ansible_user=ec2-user ansible_ssh_private_key_file=/home/centos/master.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [g2]
 n3 ansible_host=172.31.20.51 ansible_user=centos ansible_ssh_private_key_file=/home/centos/master.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
