--- a/07-ubuntu.yml
+++ b/07-ubuntu.yml
@@ -7,7 +7,7 @@
   - name: Install Apache2
     apt:
       name: apache2
-      state: installed
+      state: present
 
   - name: Start Apache2
     service:
